# stellar-zk-claude

./: .dev.vars.example  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  MAINNET-CHECKLIST.md  NOTES.md  PROVISIONING.md  bunfig.toml  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
autopilot/: .gitignore  CHAMPIONS.md  Cargo.toml  KEY_FINDINGS.md  README.md
autopilot/archive/claude-autopilot/: Cargo.toml  README.md
autopilot/archive/claude-autopilot/src/: analysis.rs  bot.rs  evolution.rs  lib.rs  main.rs  runner.rs  torus.rs
autopilot/codex-tuner/: .gitignore  README.md
autopilot/evolve/: GUIDE.md  evolve.sh  seeds.txt  state.json
autopilot/records/: README.md  champions.json  keep-benchmarks.txt  keep-checkpoints.txt  latest-roster-manifest.json
autopilot/scripts/: bot-roster.sh  generate-champion-tapes.sh  promote-top-tapes.sh  prune-artifacts.sh  rebench-finalists.sh  run-30m-breakability-hunt.sh  run-efficiency-elite-suite.sh  run-objective2-30m-suite.sh  run-offline-alltime-parallel-hunt.sh  run-offline-duel-highcap.sh  run-offline-optimal-suite.sh  run-omega-elite-suite.sh  run-runtime-nonoffline-parallel-suite.sh  (+6 more)
claude-autopilot/: .gitignore  README.md
codex-autopilot/: README.md
docs/: LEADERBOARD-D1-MIGRATION.md  LEADERBOARD-EVENT-SOURCING-OPERATIONS.md  LEADERBOARD-PLAIN-ENGLISH-REQUESTS-2026-02.md  LEADERBOARD-WORK-PROMPT-INDEX-2026-02.md  LEADERBOARD-WORK-RECONSTRUCTION-2026-02.md  README.md  VERIFIER-PERF-NEXT.md  VERIFIER-STATUS.md  spec.md
ralph-autopilot/: .gitignore  GUIDE.md  evolve.sh
risc0/: .dockerignore  Cargo.toml  Dockerfile  VASTAI
risc0-asteroids-verifier/: .dockerignore  .gitignore  Cargo.toml  OPTIMIZATION.md  README.md  VASTAI  run_ab_test.sh  rust-toolchain.toml
risc0-asteroids-verifier/api-server/: .env.example  Cargo.toml  Dockerfile  README.md
risc0-asteroids-verifier/api-server/src/: auth.rs  config.rs  handlers.rs  jobs.rs  main.rs  response.rs  store.rs  types.rs
risc0-asteroids-verifier/api-server/src/store/: db.rs  files.rs  mod.rs  tests.rs
risc0-asteroids-verifier/host/: Cargo.toml
risc0-asteroids-verifier/host/src/: lib.rs  main.rs
risc0/api-server/: Cargo.toml
risc0/api-server/src/: main.rs
risc0/host/: Cargo.toml
risc0/host/src/: lib.rs  main.rs
rust-autopilot/: .gitignore  CHAMPIONS.md  KEY_FINDINGS.md  README.md
scripts/: _prover-helpers.sh  batch-smoke-test.sh  bench-core-cycles.sh  bench-prover-api.sh  bench-risc0.sh  bench-segment-sweep.sh  dev-rpc-proxy.mjs  dump-tape-state.ts  generate-score-bindings.sh  generate-tape.ts  prove-tape.sh  smoke-test-prover.sh  stress-test-api.sh  testnet-events-adapter.mjs  verify-tape-risc0.ts  verify-tape.ts
src/: App.css  App.tsx  consts.ts  index.css  main.tsx  time.ts  vite-env.d.ts
stellar-asteroids-contract/: .gitignore  codex-improvements.md
stellar-zk-risc0/: COMPREHENSIVE_REPORT.md  Cargo.toml  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  REVIEW_REPORT.md  REVIEW_SUMMARY.md  TEST_COVERAGE_ASSESSMENT.md  TEST_COVERAGE_SUMMARY.md  VASTAI
stellar-zk-risc0/host/: Cargo.toml
stellar-zk-risc0/host/src/: lib.rs  main.rs
test-fixtures/: README.md  proof-medium-groth16.image_id  proof-medium-groth16.journal_raw  proof-medium-groth16.seal  proof-real-game-groth16.image_id  proof-real-game-groth16.journal_raw  proof-real-game-groth16.seal  proof-short-groth16.journal_raw  proof-short-groth16.seal  test-medium.tape  test-real-game-26360.tape  test-real-game.tape  test-short.tape
worker/: cache-control.ts  constants.ts  env.ts  index.ts  keys.ts  leaderboard-ingestion.ts  leaderboard-profile-auth.ts  leaderboard-store.ts  leaderboard-sync.ts  leaderboard.ts  tape.ts  tsconfig.json  types.ts  utils.ts
(+319 files in other folders)
