[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["host/cuda"]

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
asteroids-verifier-core = { path = "../asteroids-core" }
host = { path = "../host", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
