[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
asteroids-core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[features]
cycle-prof = ["methods/cycle-prof"]
