[package]
name = "claude-autopilot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
asteroids-verifier-core = { path = "../risc0-asteroids-verifier/asteroids-core" }
